crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__auto_register_code_without_linkme_feature.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
pub mod node {
    pub struct MyStruct {}
    impl qtbridge::qtbridge_runtime::DispatchMetaCall for MyStruct {
        fn invoke_slot(&self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn invoke_slot_mut(&mut self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn read_property(&self, prop_id: u32) -> qtbridge::qtbridge_type_lib::QVariant {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
        fn write_property(&mut self, prop_id: u32, value: &qtbridge::qtbridge_type_lib::QVariant) {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
    }
    impl qtbridge::qtbridge_runtime::QMetaInfo for MyStruct {
        fn build_dynamic_meta_type(
            mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
        ) {
            use qtbridge::qtbridge_runtime::{QMetaTypeCompatible, QMetaTypeGet, QPropertyMember};
            use qtbridge::qtbridge_type_lib;
            use qtbridge_type_lib::QMetaType;
            meta_obj.as_mut().end_meta_registration();
        }
    }
    impl qtbridge::qtbridge_runtime::QObjectHolder for MyStruct {
        type ProxyRust = qtbridge::qtbridge_interfaces::qobject::QObjectProxyRust;
        fn get_shared_dynamic_meta_object_data(
        ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
            use std::sync::OnceLock;
            thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
            DYNAMIC_META_OBJECT.with(|cell| {
                *cell.get_or_init(|| {
                    let ptr = Self::create_dynamic_meta_object_data_for_type();
                    unsafe { ptr.as_ref() }.unwrap()
                })
            })
        }
        fn get_qobject_ptr_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static PTR_META_TYPE_INTERFACE: OnceLock<
                qtbridge::qtbridge_type_lib::QMetaTypeInterface,
            > = OnceLock::new();
            let iface = PTR_META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_ptr_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
    impl qtbridge::qtbridge_runtime::QmlElement for MyStruct {
        const URI: &str = "qtbridge_gen";
        const ELEMENT_NAME: &str = "MyStruct";
        const MINOR_VERSION: u8 = 2u8;
        const MAJOR_VERSION: u8 = 0u8;
        const IS_SINGLETON: bool = false;
        fn get_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static META_TYPE_INTERFACE: OnceLock<qtbridge::qtbridge_type_lib::QMetaTypeInterface> =
                OnceLock::new();
            let iface = META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
}
