crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__case_casting.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
    fn build_dynamic_meta_type(
        mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
    ) {
        use qtbridge::qtbridge_runtime::{QMetaTypeCompatible, QMetaTypeGet, QPropertyMember};
        use qtbridge::qtbridge_type_lib;
        use qtbridge_type_lib::QMetaType;
        meta_obj.as_mut().register_signal(
            "this_value_changed",
            &[<String as QMetaTypeCompatible>::compatible_qmetatype()],
        );
        meta_obj.as_mut().register_signal(
            "otherValueChanged",
            &[<f32 as QMetaTypeCompatible>::compatible_qmetatype()],
        );
        meta_obj.as_mut().register_signal(
            "thisStringValueChangedByRef",
            &[<String as QMetaTypeCompatible>::compatible_qmetatype()],
        );
        meta_obj.as_mut().register_signal(
            "thatStringValueChangedByValue",
            &[<String as QMetaTypeCompatible>::compatible_qmetatype()],
        );
        meta_obj.as_mut().register_slot(
            "onThatValueChanged",
            1u32,
            &[<String as QMetaTypeCompatible>::compatible_qmetatype()],
            &qtbridge::qtbridge_type_lib::QMetaType::default(),
            qtbridge::qtbridge_runtime::dynamicmetaobjectbuilder::Mutability::Mutable,
        );
        meta_obj.as_mut().register_property(
            "this_value",
            1u32,
            &(<String as QPropertyMember>::qmetatype()),
            false,
            "this_value_changed",
        );
        meta_obj
            .as_mut()
            .add_class_info("DefaultProperty", "this_value");
        meta_obj.as_mut().register_property(
            "otherValue",
            2u32,
            &(qtbridge::qtbridge_runtime::get_meta_type_of_fn_return_value(|this: &Self| {
                &this.otherValueVar
            })),
            false,
            "otherValueChanged",
        );
        meta_obj.as_mut().add_class_info("Author", "The Qt Company");
        meta_obj.as_mut().end_meta_registration();
    }
}
