crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__nested_type_in_properties.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
pub mod node {
    pub struct Node {
        value: i32,
        left: Option<Rc<RefCell<Node>>>,
        right: Option<Rc<RefCell<Node>>>,
    }
    impl Node {
        pub fn set_value(&mut self, value: i32) {
            self.value = value;
        }
        fn get_left(&self) -> Rc<RefCell<Self>> {
            self.left
                .as_ref()
                .expect("Left node is not present")
                .clone()
        }
        fn get_right(&self) -> &Rc<RefCell<Self>> {
            self.right.as_ref().expect("Right node is not present")
        }
        pub fn set_left(&mut self, value: &Rc<RefCell<Self>>) {
            self.left = Some(value.clone());
        }
        pub fn set_right(&mut self, value: Rc<RefCell<Self>>) {
            self.right = Some(value);
        }
    }
    unsafe impl qtbridge::qtbridge_runtime::DispatchMetaCall for Node {
        unsafe fn invoke_slot(&self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        unsafe fn invoke_slot_mut(
            &mut self,
            slot_id: u32,
            inputs: &[*const u8],
            outputs: &[*mut u8],
        ) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        unsafe fn read_property(&self, prop_id: u32) -> qtbridge::qtbridge_type_lib::QVariant {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                1u32 => unsafe { (&self.value).to_qvariant(self) },
                2u32 => unsafe { (&self.get_left()).to_qvariant(self) },
                3u32 => unsafe { (self.get_right()).to_qvariant(self) },
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
        unsafe fn write_property(
            &mut self,
            prop_id: u32,
            value: &qtbridge::qtbridge_type_lib::QVariant,
        ) {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                1u32 => {
                    let Ok(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                        panic!("Failed to convert QVariant for qproperty '{}'", "value");
                    };
                    self.set_value(value);
                }
                2u32 => {
                    let Ok(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                        panic!("Failed to convert QVariant for qproperty '{}'", "left");
                    };
                    self.set_left(&value);
                }
                3u32 => {
                    let Ok(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                        panic!("Failed to convert QVariant for qproperty '{}'", "right");
                    };
                    self.set_right(value);
                }
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
    }
    unsafe impl qtbridge::qtbridge_runtime::QMetaInfo for Node {
        fn build_dynamic_meta_type(
            mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
        ) {
            use qtbridge::qtbridge_runtime::{QMetaTypeCompatible, QMetaTypeGet, QPropertyMember};
            use qtbridge::qtbridge_type_lib;
            use qtbridge_type_lib::QMetaType;
            meta_obj.as_mut().register_property(
                "value",
                1u32,
                &(<i32 as QPropertyMember>::qmetatype()),
                false,
                "",
            );
            meta_obj.as_mut().register_property(
                "left",
                2u32,
                &(<Rc<RefCell<Self>> as QPropertyMember>::qmetatype()),
                false,
                "",
            );
            meta_obj.as_mut().register_property(
                "right",
                3u32,
                &(<Rc<RefCell<Self>> as QPropertyMember>::qmetatype()),
                false,
                "",
            );
            meta_obj.as_mut().end_meta_registration();
        }
    }
    impl qtbridge::qtbridge_runtime::QObjectHolder for Node {
        type ProxyRust = qtbridge::qtbridge_interfaces::qobject::QObjectProxyRust;
        fn get_shared_dynamic_meta_object_data(
        ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
            use std::sync::OnceLock;
            thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
            DYNAMIC_META_OBJECT.with(|cell| {
                *cell.get_or_init(|| {
                    let ptr = Self::create_dynamic_meta_object_data_for_type();
                    unsafe { ptr.as_ref() }.unwrap()
                })
            })
        }
        fn get_qobject_ptr_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static PTR_META_TYPE_INTERFACE: OnceLock<
                qtbridge::qtbridge_type_lib::QMetaTypeInterface,
            > = OnceLock::new();
            let iface = PTR_META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_ptr_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
    impl qtbridge::qtbridge_runtime::QmlElement for Node {
        const URI: &str = "qtbridge_gen";
        const ELEMENT_NAME: &str = "Node";
        const MINOR_VERSION: u8 = 3u8;
        const MAJOR_VERSION: u8 = 0u8;
        const IS_SINGLETON: bool = false;
        fn get_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static META_TYPE_INTERFACE: OnceLock<qtbridge::qtbridge_type_lib::QMetaTypeInterface> =
                OnceLock::new();
            let iface = META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
}
