crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__nested_type_in_signals.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
pub mod node {
    pub struct Node {}
    impl Node {
        pub fn signal_with_nested_type_in_argument_by_value(
            &mut self,
            value: Rc<RefCell<SomeNestedType>>,
        ) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            let Some(proxy) = <Self as qtbridge::QObjectHolder>::try_get_rust_proxy_ptr(self)
            else {
                return;
            };
            let arg_0_var =
                <Rc<RefCell<SomeNestedType>> as QMetaTypeCompatible>::to_compatible(&value);
            let argv: [*const u8; 2usize] =
                [std::ptr::null(), std::ptr::from_ref(&arg_0_var).cast()];
            qtbridge::qtbridge_runtime::qproxies::QRustProxy::emit_signal(
                unsafe { &*proxy },
                self,
                "signal_with_nested_type_in_argument_by_value",
                argv.as_slice(),
            )
        }
        pub fn signal_with_nested_type_in_argument_by_reference(
            &mut self,
            value: &Rc<RefCell<SomeNestedType>>,
        ) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            let Some(proxy) = <Self as qtbridge::QObjectHolder>::try_get_rust_proxy_ptr(self)
            else {
                return;
            };
            let arg_0_var =
                <Rc<RefCell<SomeNestedType>> as QMetaTypeCompatible>::to_compatible(value);
            let argv: [*const u8; 2usize] =
                [std::ptr::null(), std::ptr::from_ref(&arg_0_var).cast()];
            qtbridge::qtbridge_runtime::qproxies::QRustProxy::emit_signal(
                unsafe { &*proxy },
                self,
                "signal_with_nested_type_in_argument_by_reference",
                argv.as_slice(),
            )
        }
    }
    impl qtbridge::qtbridge_runtime::DispatchMetaCall for Node {
        fn invoke_slot(&self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn invoke_slot_mut(&mut self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn read_property(&self, prop_id: u32) -> qtbridge::qtbridge_type_lib::QVariant {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
        fn write_property(&mut self, prop_id: u32, value: &qtbridge::qtbridge_type_lib::QVariant) {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
    }
    impl qtbridge::qtbridge_runtime::QMetaInfo for Node {
        type CppProxy = qtbridge::qtbridge_interfaces::qobject::QObjectProxyCpp;
        fn build_dynamic_meta_type(
            mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
        ) {
            use qtbridge::qtbridge_runtime::{QMetaTypeCompatible, QMetaTypeGet, QPropertyMember};
            use qtbridge::qtbridge_type_lib;
            use qtbridge_type_lib::QMetaType;
            meta_obj.as_mut().register_signal(
                "signal_with_nested_type_in_argument_by_value",
                &[<Rc<RefCell<SomeNestedType>> as QMetaTypeCompatible>::compatible_qmetatype()],
            );
            meta_obj.as_mut().register_signal(
                "signal_with_nested_type_in_argument_by_reference",
                &[<Rc<RefCell<SomeNestedType>> as QMetaTypeCompatible>::compatible_qmetatype()],
            );
            meta_obj.as_mut().end_meta_registration();
        }
        fn get_shared_dynamic_meta_object_data(
        ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
            use std::sync::OnceLock;
            thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
            DYNAMIC_META_OBJECT.with(|cell| {
                *cell.get_or_init(|| {
                    let ptr = Self::create_dynamic_meta_object_data_for_type();
                    unsafe { ptr.as_ref() }.unwrap()
                })
            })
        }
        fn get_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static META_TYPE_INTERFACE: OnceLock<qtbridge::qtbridge_type_lib::QMetaTypeInterface> =
                OnceLock::new();
            let iface = META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
        fn get_qobject_ptr_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static PTR_META_TYPE_INTERFACE: OnceLock<
                qtbridge::qtbridge_type_lib::QMetaTypeInterface,
            > = OnceLock::new();
            let iface = PTR_META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_ptr_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
    impl qtbridge::qtbridge_runtime::QObjectHolder for Node {
        type ProxyRust = qtbridge::qtbridge_interfaces::qobject::QObjectProxyRust;
        fn as_adaptor_trait(
            rust_obj_rc: std::rc::Rc<std::cell::RefCell<Self>>,
        ) -> std::rc::Rc<
            std::cell::RefCell<
                <Self::ProxyRust as qtbridge::qtbridge_runtime::qproxies::QRustProxy>::AdapterType,
            >,
        > {
            rust_obj_rc
        }
    }
    impl qtbridge::qtbridge_runtime::QmlElement for Node {
        const URI: &str = "qtbridge_gen";
        const ELEMENT_NAME: &str = "Node";
        const MINOR_VERSION: u8 = 2u8;
        const MAJOR_VERSION: u8 = 0u8;
        const IS_SINGLETON: bool = false;
    }
}
